feat: setup CI/CD pipelines and semantic releases
- Add GitHub Actions workflows for automated releases
- Configure semantic-release for MCP package and VS Code extension
- Setup Vercel deployment for documentation website
- Add comprehensive secrets documentation
- Update package configurations for publishing
- Include automated testing and building in CI pipeline

--- a/apps/website/pages/index.mdx
+++ b/apps/website/pages/index.mdx
@@ -87,7 +87,7 @@ npm run dev --workspace=dev-atlas-extension
         Comenzar Ahora →
       </a>
       <a 
-        href="https://github.com/username/dev-atlas" 
+        href="https://github.com/abdul-hamid-achik/dev-atlas" 
         className="px-6 py-3 border border-gray-300 rounded-lg font-semibold hover:border-gray-400 transition-colors"
       >
         Ver en GitHub
