feat: complete package namespacing and maintain Nextra 3.0.0
- Update VSCode extension package name to @dev-atlas/vscode-extension
- Update documentation references to use new namespaced package names
- Force install Nextra 3.0.0 to maintain compatibility with existing configuration
- Convert Next.js config to ES modules format (.mjs)
- All packages now use @dev-atlas namespace for npm publishing safety
- Build successful across all packages

--- a/apps/website/pages/docs/getting-started.mdx
+++ b/apps/website/pages/docs/getting-started.mdx
@@ -38,7 +38,7 @@ The server will start on the default port and create a SQLite database for stori
 
 ```bash
 # Build the extension
-npm run build --workspace=dev-atlas-extension
+npm run build --workspace=@dev-atlas/vscode-extension
 
 # Package the extension
 cd apps/vscode-extension
