--- a/apps/website/pages/index.mdx
+++ b/apps/website/pages/index.mdx
@@ -78,7 +78,7 @@ npm install
 npm run dev --workspace=@dev-atlas/mcp-knowledge-graph
 
 # En otra terminal, desarrolla la extensión
-npm run dev --workspace=dev-atlas-extension
+npm run dev --workspace=@dev-atlas/vscode-extension
 ```
 
 <div className="mt-20 p-8 bg-gradient-to-r from-blue-50 to-purple-50 rounded-xl border border-blue-200">
