chore: update package names and configurations for website and shared packages
- Change package names from scoped to unscoped for `@dev-atlas/website` to `dev-atlas-website` and `@dev-atlas/shared` to `dev-atlas-shared`.
- Update Vercel configuration to reflect new package names in build commands.
- Add PostCSS configuration for Tailwind CSS support in the website.
- Modify README files to align with new package names and commands.

These changes streamline package management and enhance the deployment process for the website.

--- a/apps/website/app/docs/getting-started/page.mdx
+++ b/apps/website/app/docs/getting-started/page.mdx
@@ -35,7 +35,7 @@ npm run build
 
 ```bash
 # Build the extension
-npm run build --workspace=@dev-atlas/vscode-extension
+npm run build --workspace=dev-atlas-vscode-extension
 
 # Package the extension
 cd apps/vscode-extension
@@ -54,7 +54,7 @@ Then install the generated `.vsix` file in VS Code:
 The MCP (Model Context Protocol) server is the heart of Dev Atlas. Start it with:
 
 ```bash
-npm run dev --workspace=@dev-atlas/mcp-knowledge-graph
+npm run dev --workspace=dev-atlas-knowledge-graph
 ```
 
 The server will start and be ready to accept connections.
