--- a/apps/website/app/extension/page.mdx
+++ b/apps/website/app/extension/page.mdx
@@ -45,7 +45,7 @@ The Dev Atlas VS Code extension provides a seamless interface for interacting wi
 git clone https://github.com/abdul-hamid-achik/dev-atlas.git
 cd dev-atlas
 npm install
-npm run build --workspace=@dev-atlas/vscode-extension
+npm run build --workspace=dev-atlas-vscode-extension
 
 # Package the extension
 cd apps/vscode-extension
